--- a/style/main.css
+++ b/style/main.css
@@ -74,7 +74,7 @@ header .navbar-btn:active {
 #about {
     background: linear-gradient(rgba(0, 24, 16, 0.9),rgba(0,0,0,.70)100%), url('/img/account.jpg') no-repeat;
     background-size: cover;
-    position: fixed;
+    position: absolute;
     width:50%;
     height: 92vh;
 }
@@ -98,10 +98,6 @@ header .navbar-btn:active {
     font-size: 22px;
     font-weight: bold;
     color:rgb(44, 161, 122);
-}
-
-.section1-btn{
-    display: none;
 }
 
 /*Principal 2º section*/
@@ -211,4 +207,17 @@ input:focus~.barra::before{
     transition: color 0.3s ease-in,
                 background-color 0.3s ease-in,
                 border-color 0.3s ease-in;
+}
+
+/*Principal fetch*/
+#container-fetch {
+    background: rgba(252, 236, 160, 0.9);
+    display: flex;
+    flex-direction: row;
+    justify-content: start;
+}
+
+#fetch {
+    margin: 30px;
+    width: 100%;
 }
